# tiff_mapper

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/tiff_mapper/: api.py
tests/int/: test_mapper.py
